openshift/02-chromadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chromadb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chroma-db
  template:
    metadata:
      labels:
        app: chroma-db
    spec:
      containers:
      - name: chroma-container
        image: ghcr.io/chroma-core/chroma:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: index-data
          mountPath: /chroma/.chroma/index
      volumes:
      - name: index-data
        persistentVolumeClaim:
          claimName: index-data-pvc
