openshift/04-streamlit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: streamlit-app
  template:
    metadata:
      labels:
        app: streamlit-app
    spec:
      containers:
      - name: streamlit-container
        image: registry.hub.docker.com/shonpaz123/streamlit-app
        ports:
        - containerPort: 8501
