openshift/03-chromadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chroma-service
spec:
  selector:
    app: chroma-db  
  ports:
    - protocol: TCP
      port: 8000  
      targetPort: 8000  
  type: ClusterIP
