openshift/06-streamlit-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: streamlit-app
spec:
  to:
    kind: Service
    name: streamlit-service  
  port:
    targetPort: 8501
  wildcardPolicy: None
  tls:
    termination: edge
